Inicialização do trabalho de análise sintática
Feito:
Relatório de Erro Sintático
Declarações de Variáveis Globais
Definição de Funções
Bloco de Comandos
Declaração de Variável
Comando de Atribuição
Chamada de Função
Comando de Retorno

TODO:
Comandos de Controle de Fluxo
Expressões (iniciada)

--- a/input.in
+++ b/input.in
@@ -1,17 +1,6 @@
-int main() {    
+int foo, bar;
 
-    int number1, number2, sum, tam;
-    
-    number1 = 10;
-    number2 = 2;
-    tam = 1;
-
-    // calculate the sum
-    sum = number1 + number2;      
-    
-    /*
-        Comment
-    */
-
-    return sum;
+(int bar, float foo, bool as, int fasd) >= int! foo {
+    int foo;
+    int foo;
 }
