--- a/input.in
+++ b/input.in
@@ -1,6 +1,7 @@
-//ERR_FUNCTION
-() >= int ! g { return 0; }
-() >= int ! f {
-    g = 2;
+() >= int ! main {
+    int a, b, c;
+    a = 2;
+    b = 3;
+    c = a + b;
     return 0;
 }
