--- a/input.in
+++ b/input.in
@@ -1,9 +1,7 @@
 () >= int ! main {
     int a, b, c;
-    /*
     a = 2;
     b = 3;
-    */
-    c = a;
-    c = 1;
+    c = a + b;
+    return 0;
 }
